[project]
name = "huggingfaceagents-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix>=10.10.0",
    "duckduckgo-search>=8.0.2",
    "gradio>=5.31.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "openinference-instrumentation-smolagents>=0.1.12",
    "opentelemetry-exporter-otlp>=1.34.0",
    "opentelemetry-sdk>=1.34.0",
    "pytz>=2025.2",
    "ruff>=0.11.11",
    "smolagents[litellm,telemetry,toolkit]>=1.16.1",
    "transformers>=4.52.3",
]
