[project]
name = "huggingfaceagents-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arize-phoenix>=10.10.0",
    "duckduckgo-search>=8.0.2",
    "google>=3.0.0",
    "google-search-results>=2.4.2",
    "gradio>=5.31.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "llama-index-callbacks-arize-phoenix>=0.5.1",
    "llama-index-embeddings-huggingface>=0.5.4",
    "llama-index-llms-huggingface-api>=0.5.0",
    "llama-index-vector-stores-chroma>=0.4.2",
    "matplotlib>=3.10.3",
    "openinference-instrumentation-smolagents>=0.1.12",
    "opentelemetry-exporter-otlp>=1.34.0",
    "opentelemetry-sdk>=1.34.0",
    "pytz>=2025.2",
    "rank-bm25>=0.2.2",
    "ruff>=0.11.11",
    "smolagents[litellm,mcp,telemetry,toolkit]>=1.16.1",
    "transformers>=4.52.3",
]
